--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flake8-annotations",
+  "name": "pylint-annotations",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,13 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rbialon/flake8-annotations.git"
+    "url": "git+https://github.com/rodrigo-nogues/pylint-annotations.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Rodrigo Nogues",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rbialon/flake8-annotations/issues"
+    "url": "https://github.com/rodrigo-nogues/pylint-annotations/issues"
   },
-  "homepage": "https://github.com/rbialon/flake8-annotations#readme"
+  "homepage": "https://github.com/rodrigo-nogues/pylint-annotations#readme"
 }
